<resources>
    <string name="app_name">App Portfolio</string>
    <string name="popular_movies_app_name">Popular Movies</string>
    <string name="stock_hawk_app_name">Stock Hawk</string>
    <string name="build_it_bigger_app_name">Build It Bigger</string>
    <string name="make_your_app_material_app_name">
        Make Your App Material
    </string>
    <string name="go_ubiquitous_app_name">Go Ubiquitous</string>
    <string name="capstone_app_name">Capstone</string>
</resources>
